--- a/package.json
+++ b/package.json
@@ -17,12 +17,23 @@
     "test:browser": "plugin-helpers test:browser",
     "build": "plugin-helpers build"
   },
+  "dependencies": {
+    "AsyncStorage": "^0.1.5",
+    "ovrui": "^1.4.1",
+    "react": "16.3.2",
+    "react-360": "~1.1.0",
+    "react-360-web": "~1.1.0",
+    "react-native": "~0.55.4",
+    "three": "^0.87.0"
+  },
   "devDependencies": {
     "@elastic/eslint-config-kibana": "link:../../packages/eslint-config-kibana",
     "@elastic/eslint-import-resolver-kibana": "link:../../packages/kbn-eslint-import-resolver-kibana",
     "@kbn/expect": "link:../../packages/kbn-expect",
     "@kbn/plugin-helpers": "link:../../packages/kbn-plugin-helpers",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^19.0.0",
+    "babel-preset-react-native": "^1.9.1",
     "eslint": "^5.16.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.16.0",
@@ -31,6 +42,10 @@
     "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-no-unsanitized": "^3.0.2",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "jest": "^19.0.2",
+    "react-devtools": "^2.5.2",
+    "react-test-renderer": "16.0.0",
+    "xopen": "1.0.0"
   }
 }
